# Air1-Monitor

./: .cursorrules  .gitignore  .gitlab-ci.yml  CROSS_BUILD_ANALYSIS.md  Cargo.toml  Cross.toml  PKGBUILD  README.md  air1-monitor.desktop  build-in-docker.sh  build.rs
.cargo/: audit.toml  config.toml
.continue/mcpServers/: new-mcp-server.yaml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  drep-review.yaml
air1-monitor/: Cargo.toml  PKGBUILD
air1-monitor/src/: app.rs  config.rs  main.rs  mqtt.rs  secrets.rs
docker/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.armv7-unknown-linux-gnueabihf
src/: app.rs  app_test.rs  config.rs  lib.rs  main.rs  mqtt.rs  secrets.rs  ui.rs
tests/: integration_test.rs
