[package]
name = "air1-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
directories = "6.0"
eframe = { version = "0.33", default-features = true, features = ["wgpu"] }
egui_extras = "0.33"
keyring = "2.3"
rumqttc = { version = "0.25", default-features = false, features = ["use-rustls"] }
rustls-native-certs = "0.8"
rustls-pki-types = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
